API que traz infos dos cards e precos
